// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourtList.styles > Address renders a p and matches snapshot 1`] = `
.c0 {
  margin: 0 0 4px;
  font-size: 0.75rem;
  color: var(--pf-text-muted);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<p
  class="c0"
/>
`;

exports[`CourtList.styles > CourtNum renders a span and matches snapshot (unselected and selected) 1`] = `
.c0 {
  flex-shrink: 0;
  width: 22px;
  height: 22px;
  border-radius: 50%;
  background: var(--pf-primary);
  color: var(--pf-card);
  font-size: 0.6875rem;
  font-weight: 700;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 1px;
}

<span
  class="c0"
/>
`;

exports[`CourtList.styles > CourtNum renders a span and matches snapshot (unselected and selected) 2`] = `
.c0 {
  flex-shrink: 0;
  width: 22px;
  height: 22px;
  border-radius: 50%;
  background: var(--pf-primary-hover);
  color: var(--pf-card);
  font-size: 0.6875rem;
  font-weight: 700;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 1px;
}

<span
  class="c0"
/>
`;

exports[`CourtList.styles > Header renders an h2 and matches snapshot 1`] = `
.c0 {
  margin: 0;
  padding: 12px 16px;
  font-family: var(--pf-font-display);
  font-size: 1.1rem;
  letter-spacing: 0.02em;
  font-weight: 400;
  color: var(--pf-text);
  border-bottom: 1px solid var(--pf-border-soft);
  flex-shrink: 0;
}

<h2
  class="c0"
/>
`;

exports[`CourtList.styles > Hours renders a p and matches snapshot (open and closed) 1`] = `
.c0 {
  margin: 0;
  font-size: 0.75rem;
  font-weight: 700;
  color: var(--pf-open);
}

<p
  class="c0"
/>
`;

exports[`CourtList.styles > Hours renders a p and matches snapshot (open and closed) 2`] = `
.c0 {
  margin: 0;
  font-size: 0.75rem;
  font-weight: 700;
  color: var(--pf-closed);
}

<p
  class="c0"
/>
`;

exports[`CourtList.styles > Info renders a div and matches snapshot 1`] = `
.c0 {
  flex: 1;
  min-width: 0;
}

<div
  class="c0"
/>
`;

exports[`CourtList.styles > Item renders an li and matches snapshot (unselected and selected) 1`] = `
.c0 {
  display: flex;
  gap: 12px;
  padding: 12px 16px;
  cursor: pointer;
  align-items: flex-start;
  transition: background 0.1s;
  border-bottom: 1px solid var(--pf-border-soft);
  background: transparent;
}

.c0:hover {
  background: var(--pf-surface);
}

<li
  class="c0"
/>
`;

exports[`CourtList.styles > Item renders an li and matches snapshot (unselected and selected) 2`] = `
.c0 {
  display: flex;
  gap: 12px;
  padding: 12px 16px;
  cursor: pointer;
  align-items: flex-start;
  transition: background 0.1s;
  border-bottom: 1px solid var(--pf-border-soft);
  background: var(--pf-ivory);
}

.c0:hover {
  background: var(--pf-ivory);
}

<li
  class="c0"
/>
`;

exports[`CourtList.styles > List renders a ul and matches snapshot 1`] = `
.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
  overflow-y: auto;
  flex: 1;
}

<ul
  class="c0"
/>
`;

exports[`CourtList.styles > Name renders a p and matches snapshot 1`] = `
.c0 {
  margin: 0 0 2px;
  font-size: 0.875rem;
  font-weight: 700;
  color: var(--pf-text);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<p
  class="c0"
/>
`;

exports[`CourtList.styles > Rating renders a p and matches snapshot 1`] = `
.c0 {
  margin: 0 0 2px;
  font-size: 0.75rem;
  color: var(--pf-marigold);
}

<p
  class="c0"
/>
`;

exports[`CourtList.styles > RatingCount renders a span and matches snapshot 1`] = `
.c0 {
  color: var(--pf-text-muted);
}

<span
  class="c0"
/>
`;

exports[`CourtList.styles > Sidebar renders a div and matches snapshot 1`] = `
.c0 {
  position: absolute;
  left: 16px;
  top: 184px;
  bottom: 16px;
  z-index: 10;
  width: 300px;
  background: var(--pf-card);
  border: 1px solid var(--pf-border-soft);
  border-radius: var(--pf-radius-md);
  box-shadow: var(--pf-shadow-card);
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

@media (max-width: 640px) {
  .c0 {
    left: 0;
    right: 0;
    top: auto;
    bottom: 0;
    width: 100%;
    border-radius: 16px 16px 0 0;
    max-height: 45svh;
  }
}

<div
  class="c0"
/>
`;
